add get user's subscription endpoint
