# docs/swagger.yaml
@@ -503,6 +503,41 @@ paths:
       summary: subscribe
       tags:
       - subscription
+  /subscriptions/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get current user's subscriptions
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Subscription'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - BearerAuth: []
+      summary: get subscriptions
+      tags:
+      - subscription
 securityDefinitions:
   BearerAuth:
     description: Enter your auth token in the format **Bearer &lt;token&gt;**
